<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button_text">TRUE</string>
    <string name="false_button_text">FALSE</string>
    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Nope</string>
    <string name="next_button">NEXT</string>
    <string name="previous_button">PREVIOUS</string>

    //Questions
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_ocean">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    //Cheat Activity
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button_text">Show Answer</string>
    <string name="cheat_button_text">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong!</string>

</resources>